#2234 - Referred out spacing fixed - Navaneeth

--- a/ui/app/styles/clinical/_jss-ui-common.scss
+++ b/ui/app/styles/clinical/_jss-ui-common.scss
@@ -399,6 +399,7 @@ input[file-upload] {
     color: #fff;
     padding: 3px 10px;
     border-radius: 5px;
+    margin-right: 7px;
   }
 }
 
